# circle-jerk

./: README.md
client/: .env  .eslintrc.json  package.json
client/src/: index.html  index.tsx
client/src/app/: App.tsx  Chat.tsx  Circle.tsx  Layout.tsx  Logs.tsx  Scores.tsx
client/src/config/: config.ts
client/src/contexts/: Game.tsx  Websocket.tsx
server/: Cargo.toml
server/scripts/: deploy.sh
server/src/: main.rs
